[package]
name = "concurrent_open_map"
version = "0.1.0"
edition = "2021"
authors = ["nnsgmsone <nnsmgsone@outlook.com>"]
license = "GPL-3.0"
description = "A concurrent hashmap implementation in Rust"
repository = "https://github.com/nnsgmsone/concurrent_open_map"
documentation = "https://docs.rs/concurrent_hashmap"
homepage = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
parking_lot = "0.12.3"
